feat: update API routes to include versioning in endpoints for matches, players, and setup
